# cargo-regime-check

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: kvstore-isp-split.toml  refactor.toml  transition.toml
src/: lib.rs  pipeline.rs
src/adapters/: cargo_metadata.rs  diff_dir.rs  git.rs  mod.rs  public_api_diff.rs  public_api_process.rs  regime_file.rs
src/domain/: classify.rs  diff.rs  gate.rs  identity.rs  mod.rs  transition.rs
src/report/: human.rs  json.rs  mod.rs  workspace.rs
src/workspace/: mod.rs
tests/: agent_loop.rs  exit_codes.rs  workspace.rs
tests/common/: mod.rs
tests/fixtures/: demo-base.toml  demo.diff  kvstore-base.toml  kvstore-isp-split.diff
tests/fixtures/workspace/: Cargo.toml
tests/fixtures/workspace-diffs/: crate_a.diff  crate_b.diff
tests/fixtures/workspace/crate_a/: Cargo.toml  regime-transition.toml
tests/fixtures/workspace/crate_a/src/: lib.rs
tests/fixtures/workspace/crate_b/: Cargo.toml  regime-transition.toml
tests/fixtures/workspace/crate_b/src/: lib.rs
tests/fixtures/workspace/crate_c/: Cargo.toml
tests/fixtures/workspace/crate_c/src/: lib.rs
